--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "babel-polyfill": "^6.23.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.1",
+    "whatwg-fetch": "^2.0.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {
@@ -23,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "dotenv-webpack": "^1.5.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-plugin-import": "^2.6.1",
@@ -31,7 +38,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "grunt": "^1.0.1",
     "grunt-stylelint": "^0.8.0",
-    "grunt-webpack": "^3.0.0",
+    "grunt-webpack": "^3.0.1",
     "gruntify-eslint": "^4.0.0",
     "husky": "^0.14.3",
     "node-sass": "^4.5.3",
